// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledFlexBox FlexLeftBox should render 1`] = `
<div
  className="StyledFlexBox__FlexLeftBox-pel0bf-0 gkqApL"
/>
`;

exports[`StyledFlexBox FlexRightBox should render 1`] = `
<div
  className="StyledFlexBox__FlexRightBox-pel0bf-1 jzFhFO"
/>
`;
